--- a/client/src/homePage/homePage.css
+++ b/client/src/homePage/homePage.css
@@ -1,10 +1,10 @@
 .homePage {
     display: flex;
-    padding-top: 60px; /* Adjust according to your Navbar height */
+    padding-top: 60px;
   }
   
   .sidebar {
-    width: 200px;
+    min-width: 200px;
     background: #f0f2f5;
     height: calc(100vh - 60px);
     padding-top: 20px;
@@ -30,14 +30,17 @@
   }
   
   .search-bar {
-    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;    
   }
   
   .search-bar input {
-    width: 100%;
+    width: 80%;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
+    border-radius: 5px;
   }
   
   .content {
@@ -45,5 +48,10 @@
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .sidebar ul li.selected {
+    background-color: #a8dadc;
+    color: white;
   }
   
